# ClipX

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_USER.md  build_and_zip.ps1
docs/: design.md
src/: CMakeLists.txt
src/ClipD/: CMakeLists.txt
src/ClipD/include/: auto_start.h  clipboard_listener.h  data_manager.h  hotkey_manager.h  ipc_server.h  tray_icon.h
src/ClipD/resources/: ClipD.rc  README.md  create_multi_size_icon.py  create_shortcut.ps1  generate_icon.ps1  generate_icon.py
src/ClipD/src/: auto_start.cpp  clipboard_listener.cpp  data_manager.cpp  hotkey_manager.cpp  ipc_server.cpp  main.cpp  tray_icon.cpp
src/Common/: CMakeLists.txt
src/Common/include/common/: config.h  ipc_protocol.h  logger.h  types.h  utils.h  windows.h
src/Common/src/: config.cpp  logger.cpp  utils.cpp
src/Overlay/: CMakeLists.txt
src/Overlay/include/: ipc_client.h  overlay_window.h  renderer.h
src/Overlay/resources/: Overlay.rc
src/Overlay/src/: ipc_client.cpp  main.cpp  overlay_window.cpp  renderer.cpp
tests/: CMakeLists.txt
